...
    @Binding var selectedTab: DashboardScreen.DashboardTab
    
    var body: some View {
        HStack(spacing: 30) {
            NavButton(
                icon: "house.fill",
                title: "Chores",
                isSelected: selectedTab == .chores
            ) {
                selectedTab = .chores
            }
            
            NavButton(
                icon: "trophy.fill",
                title: "Leaderboard",
                isSelected: selectedTab == .leaderboard
            ) {
                selectedTab = .leaderboard
            }
            
            NavButton(
...
